# review-slayer

./: .env.example  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/crew/: agents.py  characters.py  config.py  crew.py  roles.py  tasks.py  tools.py
app/github/: client.py  comment.py  diff.py
app/webhook/: events.py  handler.py
