[project]
name = "review-slayer"
version = "0.1.0"
description = "AI Code Review SaaS — CrewAI multi-agent code reviewer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "crewai>=0.108.0",
    "crewai-tools>=0.38.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "cryptography>=43.0.0",
    "PyJWT>=2.9.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "httpx",  # TestClient requires httpx
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
